hphp/hack/test/typecheck/unassigned_tconst.php.exp
File "unassigned_tconst.php", line 4, characters 18-18:
Encountered unexpected text `;`, was expecting a class element. (Parsing[1002])
File "unassigned_tconst.php", line 4, characters 19-19:
A class member, method, type, trait usage, trait require, xhp attribute, xhp use, or xhp category is expected here. (Parsing[1002])
File "unassigned_tconst.php", line 4, characters 14-16:
This type constant is not declared as abstract, it must have an assigned type (NastCheck[3026])
